<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/welcome_ENG"
        android:textSize="42sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:elegantTextHeight="true"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textSize="23sp"
        android:textColor="@color/black"

        android:hint="@string/email_ENG"
        android:autofillHints="emailAddress"
        android:textAlignment="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:textSize="23sp"
        android:hint="@string/password_ENG"
        android:autofillHints="username"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/errors"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        android:textSize="22sp"
        android:textColor="@color/warning_color"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        app:layout_constraintBottom_toTopOf="@id/login_as_guest_button"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="200dp"
        android:text="@string/login_ENG"
        android:padding="10dp"
        android:textSize="16sp"
        android:onClick="login"
        tools:ignore="UsingOnClickInXml"

        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/registration_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_as_guest_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/registration_ENG"
        android:padding="10dp"
        android:textSize="16sp"
        android:onClick="change_to_registration_activity"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_as_guest_button"
        app:layout_constraintBottom_toTopOf="@id/registration_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="550dp"
        android:text="@string/login_as_guest_ENG"
        android:padding="10dp"
        android:textSize="16sp"
        android:onClick="login_as_guest"
        tools:ignore="UsingOnClickInXml"
        />

</androidx.constraintlayout.widget.ConstraintLayout>